# ms-transaction-api/src/models/transaction.response.ts
@@ -1,0 +1,10 @@
+import { ITransactionStatusResponse } from './transaction-status.response';
+import { ITransactionTypeResponse } from './transaction-type.response';
+
+export interface ITransactionResponse {
+  transactionExternalId: string;
+  transactionType: ITransactionTypeResponse;
+  transactionStatus: ITransactionStatusResponse;
+  value: number;
+  createdAt: string;
+}
