# ms-transaction-api/src/routes/transaction.route.ts
@@ -1,0 +1,8 @@
+import { Router } from 'express';
+import { checkExistTransaction, getTransactionDetail } from '../controllers/transaction.controller';
+
+const router = Router();
+
+router.get('/:id/status', checkExistTransaction, getTransactionDetail);
+
+export default router;
